@@ -66,7 +66,7 @@ void OrientationSensorChannelInterface::dataReceived()
     QVector<TimedUnsigned> values;
     while (read<TimedUnsigned>(values))
     {
-        foreach(TimedUnsigned data, values)
+        foreach(const TimedUnsigned& data, values)
             emit orientationChanged(data);
         values.clear();
     }
