@@ -17,6 +17,7 @@ sensord (0.6.35) unstable; urgency=low
     - If sensor is stopped it will return given value set in AbstractSensorChannelInteface or default value if nothing has been set.
 
     Fixes: NB#218971.
+  * Optimized some foreach-statements.  
 
  -- shenghua <ext-shenghua.1.liu@nokia>  Thu, 13 Jan 2011 13:29:01 +0200
 
